New in master
=============

Features
--------

* Trace template usage when an environment variable ``NIKOLA_TEMPLATES_TRACE``
  is set to any non-empty value.
* Give user control over the raw underlying template engine
  (either ``mako.lookup.TemplateLookup`` or ``jinja2.Environment``)
  via an optional ``conf.py`` method ``TEMPLATE_ENGINE_FACTORY``.
* Switch to pyproject.toml

Bugfixes
--------

* Ignore errors in parsing SVG files for shrinking them, copy original file to output instead
  (Issue #3785)
* Restore ``annotation_helper.tmpl`` with dummy content - fix themes still mentioning it
  (Issue #3764, #3773)
* Fix compatibility with watchdog 4 (Issue #3766)
* ``nikola serve`` now works with non-root SITE_URL.
* Stack traces meaningless for end users now more reliably suppressed (Issue #3838).

Other
-----

* Changed filter for tidy from  ``tidy5`` to ``tidy``.

New in v8.3.1
=============

Features
--------

* Support passing ``--poll`` to ``nikola auto`` to better deal with symlink farms.

Bugfixes
--------

* Remove insecure HTTP fallback from ``nikola plugin``
* Fix the ``nikola plugin`` command not working (Issue #3736, #3737)
* Fix ``nikola new_post --available-formats`` crashing with TypeError
  (Issue #3750)
* Fix the new plugin manager not loading plugins if the plugin folder is a symlink (Issue #3741)
* Fix the ``nikola plugin`` command not working (Issue #3736)
* Remove no longer used leftovers of annotations support (Issue #3764)

Other
-----

* Nikola now requires Python 3.8 or newer.
* Nikola has adopted a policy for Python version support,
  promising support for versions supported by the Python core team,
  Ubuntu LTS, or Debian stable, and taking into consideration
  Debian oldstable and PyPy.
* Remove polyfill from `polyfill.io`.

New in v8.3.0
=============

Features
--------

* Implement a new plugin manager from scratch to replace Yapsy,
  which does not work on Python 3.12 due to Python 3.12 carelessly